--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
-              run: dotnet pack --configuration Release /p:Version=${{ steps.version.outputs.PACKAGE_VERSION }}
+              run: dotnet pack --configuration Release -property:Version=${{ steps.version.outputs.PACKAGE_VERSION }}
 
             - name: Deploy on NuGet.org
               run: |
