--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
                   dotnet-version: '7.x'
 
             - name: Build
-              run: dotnet build Moodle.Net/Moodle.Net.csproj -c Release
+              run: dotnet build Moodle.Net/Moodle.Net.csproj --no-restore -c Release
 
     test:
         runs-on: ubuntu-latest
@@ -43,14 +43,13 @@ jobs:
 
         steps:
             - name: Set NuGet package version
-              id: version
-              run: echo "::set-output name=PACKAGE_VERSION::$(echo ${{ github.ref }} | sed 's/refs\/tags\///')"
+              run: echo "PACKAGE_VERSION=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')" >> $GITHUB_ENV
 
             - name: Set up .Net
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
-              run: dotnet pack --configuration Release -p:Version=${{ steps.version.outputs.PACKAGE_VERSION }} Moodle.Net/Moodle.Net.csproj
+              run: dotnet pack --configuration Release -p:Version=$PACKAGE_VERSION Moodle.Net/Moodle.Net.csproj
 
             - name: Deploy on NuGet.org
               run: |
