--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,9 @@ jobs:
         needs: [build]
 
         steps:
+            - name: Checkout Code
+              uses: actions/checkout@v2
+
             - name: Run tests
               run: dotnet test ./Moodle.Net.sln /p:Configuration=Release --no-restore --no-build --verbosity normal
 
@@ -42,6 +45,9 @@ jobs:
         needs: [test]
 
         steps:
+            - name: Checkout Code
+              uses: actions/checkout@v2
+
             - name: Set NuGet package version
               run: echo "PACKAGE_VERSION=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')" >> $GITHUB_ENV
 
