--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,4 +60,4 @@ jobs:
                   dotnet pack --configuration Release -p:Version=$PACKAGE_VERSION
 
             - name: Deploy on NuGet.org
-              run: dotnet nuget push ./bin/Release/*.nupkg -k ${{ secrets.NUGET_APIKEY }} -s https://api.nuget.org/v3/index.json
+              run: dotnet nuget push ./Moodle.Net/bin/Release/*.nupkg -k ${{ secrets.NUGET_APIKEY }} -s https://api.nuget.org/v3/index.json
