--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
                   cd Moodle.Net
                   dotnet pack --configuration Release -p:Version=$PACKAGE_VERSION
 
-            - name: Deploy on NuGet.org and create GitHub package
+            - name: Deploy on NuGet.org
               run: dotnet nuget push ./Moodle.Net/bin/Release/*.nupkg -k ${{ secrets.NUGET_APIKEY }} -s https://api.nuget.org/v3/index.json
 
             - name: Create GitHub package
