--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,7 +51,7 @@ jobs:
             - name: Set NuGet package version
               run: echo "PACKAGE_VERSION=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')" >> $GITHUB_ENV
 
-            - name: Set up .Net
+            - name: Set up .NET
               uses: actions/setup-dotnet@v2
 
             - name: Create NuGet package
@@ -63,5 +63,5 @@ jobs:
               run: |
                   echo "//nuget.pkg.github.com/tschokri/index.json" > NuGet.Config.xml
                   dotnet nuget add source "https://nuget.pkg.github.com/tschokri/index.json" --name github
-                  cd Moodle.Net/Moodle.Net/bin/Release
+                  cd /home/runner/work/Moodle.Net/Moodle.Net/Moodle.Net/bin/Release/
                   dotnet nuget push ./*.nupkg --source github -k ${{ secrets.GITHUB_TOKEN }}
