--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,10 +61,10 @@ jobs:
 
             - name: Create Release
               run: |
-                  echo "//nuget.pkg.github.com/tschokri/index.json" > NuGet.Config.xml
-                  dotnet nuget add source "https://nuget.pkg.github.com/tschokri/index.json" --name github -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+                  echo "//nuget.pkg.github.com/tschokri/index.json" > NuGet.Config
+                  dotnet nuget add source "https://nuget.pkg.github.com/tschokri/index.json" --name github
                   cd Moodle.Net/bin/Release  # Adjust the path to your .nupkg files
                   for package in *.nupkg; do
-                    dotnet nuget push $package --source github --api-key ${{ secrets.GITHUB_TOKEN }}
+                    dotnet nuget push $package --source github
                     dotnet nuget push $package --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_APIKEY }}
                   done
