--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,7 +61,7 @@ jobs:
 
             - name: Create Release
               run: |
-                  echo "//nuget.pkg.github.com/tschokri/index.json" > NuGet.Config
+                  echo "//nuget.pkg.github.com/tschokri/index.json" > NuGet.Config.xml
                   dotnet nuget add source "https://nuget.pkg.github.com/tschokri/index.json" --name github
                   cd Moodle.Net/bin/Release  # Adjust the path to your .nupkg files
                   for package in *.nupkg; do
